--- a/shenxue.html
+++ b/shenxue.html
@@ -18,12 +18,14 @@
 	<source src="1.mp3" type="audio/mpeg">
 	</audio>
 	<div style="display:none">
-		<div class="shape">叹人生</div>
-		<div class="shape">不如意事</div>
-    <div class="shape">十常八九</div>
-    <div class="shape">莫怨嗟</div>
-    <div class="shape">长途漫漫</div>
-    <div class="shape">昨日非今朝</div>
+		<div class="shape">茜茜</div>
+		<div class="shape">不是茜茜</div>
+		<div class="shape">是qianqian</div>
+    <div class="shape">能搞够在</div>
+    <div class="shape">炽热的八月中s</div>
+    <div class="shape">认识你</div>
+    <div class="shape">是我的荣幸</div>
+		
 	</div>
 	<script>
 		var canvas = document.getElementById("cas");
