--- a/shenxue.html
+++ b/shenxue.html
@@ -69,7 +69,7 @@
 						  					2,
 											"#FFF" ,
 											 {x:canvas.width/2 , y:200} , 
-											 document.querySelectorAll(".shape")[1]
+											 document.querySelectorAll(".shape")[index_shape]
 						 );
 					index_shape=(index_shape+1)% document.querySelectorAll(".shape").length;
 					bigbooms.push(bigboom)
