--- a/shenxue.html
+++ b/shenxue.html
@@ -19,13 +19,18 @@
 	</audio>
 	<div style="display:none">
 		<div class="shape">茜茜</div>
-		<div class="shape">不是茜茜</div>
-		<div class="shape">是qianqian</div>
-    <div class="shape">能搞够在</div>
-    <div class="shape">炽热的八月中s</div>
+		<div class="shape">并非疾声xixi</div>
+		<div class="shape">而是轻吟qianqian</div>
+    <div class="shape">能够在</div>
+    <div class="shape">躁热的八月中s</div>
     <div class="shape">认识你</div>
-    <div class="shape">是我的荣幸</div>
-		
+    <div class="shape">如同清风徐来</div>
+ <div class="shape">万物宁静</div>
+ <div class="shape">愿九月的柔细的阳光</div>
+ <div class="shape">轻抚你的笑脸</div>
+ <div class="shape">只给予温暖</div>
+<div class="shape">而又不留下痕迹</div>
+<div class="shape">你好，茜茜</div>	
 	</div>
 	<script>
 		var canvas = document.getElementById("cas");
